last update before HAGANA

--- a/wedding-wise-app/public/index.html
+++ b/wedding-wise-app/public/index.html
@@ -24,6 +24,14 @@
     <!-- links from Google fonts -->
 
     <title>React App</title>
+    <!-- <script
+      defer="defer"
+      src="https://proj.ruppin.ac.il/cgroup70/test2/tar2//static/js/main.d351dfea.js"
+    ></script>
+    <link
+      href="https://proj.ruppin.ac.il/cgroup70/test2/tar2//static/css/main.af4a2e69.css"
+      rel="stylesheet"
+    /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
